--- a/agentpy/mainSimulation.ipynb
+++ b/agentpy/mainSimulation.ipynb
@@ -1018,8 +1018,11 @@
    "source": [
     "class SergioAgent(ap.Agent):\n",
     "    \"\"\"\n",
-    "    Se mueve con movimientos al azar, pero si encuentra una caja la agarra \n",
-    "    y entuentra el mejor camino al centro\n",
+    "    Las reglas de este agente son las siguientes:\n",
+    "        - Si encuentra una caja a su alrededor, la agarra \n",
+    "        - Si tiene una caja y está cerca del centro, la apila\n",
+    "        - Si tiene una caja, encuentra el mejor camino al centro y se dirige en esa direccion\n",
+    "        - De lo contrario, explora las columnas una por una, de arriba a abajo, eligiendo la mas cercana no explorada en su totalidad\n",
     "    \"\"\"\n",
     "    \n",
     "    def setup(self):\n",
@@ -1040,6 +1043,14 @@
     "        self.bfs_path = []  # Lista de movimientos para el BFS\n",
     "        self.discharge_locations = self.model.discharge_locations\n",
     "        self.discharge_location = (-1, -1) # al principio no hay ninguna seleccionada\n",
+    "        \n",
+    "        self.visited_cells = [\n",
+    "            [False for _ in range(self.model.p.m)] for _ in range(self.model.p.n)\n",
+    "        ]\n",
+    "        self.visited_column = [0 for _ in range(self.model.p.m)] # Para verificar más rápido si todas las celdas de una columna han sido visitadas\n",
+    "        for x, y in self.discharge_locations:\n",
+    "            self.visited_cells[x][y] = True\n",
+    "            \n",
     "\n",
     "    def setup_position(self, start_position):\n",
     "        self.position = start_position  # Posición inicial del agente\n",
@@ -1049,6 +1060,7 @@
     "        x, y = self.position\n",
     "        self.nearby_single_boxes = []\n",
     "        self.nearby_box_stack = []\n",
+    "        self.visited_cells[x][y] = True\n",
     "        \n",
     "        neighbors = self.model.get_neighbors(x, y)\n",
     "        for neighbor_pos in neighbors:\n",
@@ -1063,6 +1075,92 @@
     "                self.nearby_single_boxes.append(neighbor_pos)\n",
     "            elif 1 <= box_count <= 4:\n",
     "                self.nearby_box_stack.append(neighbor_pos)\n",
+    "            elif box_count == 0:\n",
+    "                self.visited_cells[i][j] = True # Uninteresting position\n",
+    "        \n",
+    "        # Update internal visited \n",
+    "        for j in range(self.model.p.m):\n",
+    "            if self.visited_column[j]:\n",
+    "                continue\n",
+    "            \n",
+    "            sum = 0\n",
+    "            for i in range(self.model.p.n):\n",
+    "                sum += self.visited_cells[i][j]\n",
+    "            if sum == self.model.p.n:\n",
+    "                self.visited_column[j] = True\n",
+    "            \n",
+    "\n",
+    "    \n",
+    "    def next(self):\n",
+    "        \"\"\" Determina el siguiente paso \"\"\"\n",
+    "        plan = self.choose_plan()\n",
+    "        if plan == \"find_discharge_location\":\n",
+    "            self.find_discharge_location()\n",
+    "        elif plan == \"explore\":\n",
+    "            self.explore()\n",
+    "    \n",
+    "    def action(self):\n",
+    "        \"\"\" Ejecuta la acción \"\"\"\n",
+    "        if self.intention == \"stack\":\n",
+    "            self.stack_boxes(*self.intention_position)\n",
+    "        elif self.intention == \"pick_up\":\n",
+    "            self.pick_box(*self.intention_position)\n",
+    "        elif self.intention == \"move\" and self.model.is_valid_move_position(self.intention_position):\n",
+    "            self.position = self.intention_position\n",
+    "    \n",
+    "    def move(self):\n",
+    "        \"\"\" Ejecuta un movimiento \"\"\"\n",
+    "        if not self.model.is_floor_organized:\n",
+    "            self.model.total_moves += 1\n",
+    "        self.see()\n",
+    "        self.next()\n",
+    "        self.action()\n",
+    "        self.model.record_move(self)\n",
+    "    \n",
+    "    \n",
+    "    \"\"\" Explore related functions\"\"\"\n",
+    "    \n",
+    "    def explore(self):\n",
+    "        \"\"\" Explora el entorno \"\"\"\n",
+    "        self.intention = \"wait\"  # Por defecto, espera\n",
+    "        if not self.has_box and self.nearby_single_boxes:\n",
+    "            self.intention = \"pick_up\"\n",
+    "            self.intention_position = self.model.nprandom.choice(self.nearby_single_boxes)\n",
+    "        else:\n",
+    "            if not self.bfs_path:\n",
+    "                self.find_objective()\n",
+    "            \n",
+    "            self.follow_bfs_path()\n",
+    "    \n",
+    "    def find_objective(self): \n",
+    "        # Start at impossible value\n",
+    "        columns = [ j for j in range(self.model.p.m) if not self.visited_column[j] ]\n",
+    "        if len(columns) == 0:\n",
+    "            self.intention = \"wait\"\n",
+    "            return\n",
+    "        \n",
+    "        objective_column = min(\n",
+    "            columns,\n",
+    "            key= lambda j: abs(self.position[1] - j)\n",
+    "        )\n",
+    "        \n",
+    "        objective_row = -1\n",
+    "        for i in range(self.model.p.m):\n",
+    "            if not self.visited_cells[i][objective_column]:\n",
+    "                objective_row = i\n",
+    "                break\n",
+    "        \n",
+    "        if objective_row == -1:\n",
+    "            self.intention = \"wait\"\n",
+    "            return\n",
+    "        \n",
+    "        # Find best path to that cell with bfs\n",
+    "        self.bfs_path = self.bfs(self.position, (objective_row, objective_column))\n",
+    "        if self.bfs_path:\n",
+    "            self.bfs_path.pop(0)\n",
+    "        \n",
+    "        \n",
+    "    \"\"\" Aux functions\"\"\"\n",
     "    \n",
     "    def choose_plan(self):\n",
     "        \"\"\" Escoge el plan según el estado actual \"\"\"\n",
@@ -1118,6 +1216,9 @@
     "            if self.bfs_path:\n",
     "                self.bfs_path.pop(0)\n",
     "        \n",
+    "        self.follow_bfs_path()\n",
+    "    \n",
+    "    def follow_bfs_path(self):\n",
     "        if self.bfs_path:\n",
     "            # Nos intentamos mover a la posicion siguiente\n",
     "            self.intention_position = self.bfs_path.pop(0)\n",
@@ -1156,47 +1257,13 @@
     "                    queue.append((neighbor, path + [current]))\n",
     "        return []  # No econtramos camino\n",
     "    \n",
-    "    def explore(self):\n",
-    "        \"\"\" Explora el entorno \"\"\"\n",
-    "        self.intention = \"wait\"  # Por defecto, espera\n",
-    "        if not self.has_box and self.nearby_single_boxes:\n",
-    "            self.intention = \"pick_up\"\n",
-    "            self.intention_position = self.model.nprandom.choice(self.nearby_single_boxes)\n",
-    "        else:\n",
-    "            self.intention = \"move\"\n",
-    "            neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
-    "            self.intention_position = self.model.nprandom.choice(neighbors)\n",
-    "    \n",
-    "    def next(self):\n",
-    "        \"\"\" Determina el siguiente paso \"\"\"\n",
-    "        plan = self.choose_plan()\n",
-    "        if plan == \"find_discharge_location\":\n",
-    "            self.find_discharge_location()\n",
-    "        elif plan == \"explore\":\n",
-    "            self.explore()\n",
-    "    \n",
-    "    def action(self):\n",
-    "        \"\"\" Ejecuta la acción \"\"\"\n",
-    "        if self.intention == \"stack\":\n",
-    "            self.stack_boxes(*self.intention_position)\n",
-    "        elif self.intention == \"pick_up\":\n",
-    "            self.pick_box(*self.intention_position)\n",
-    "        elif self.intention == \"move\" and self.model.is_valid_move_position(self.intention_position):\n",
-    "            self.position = self.intention_position\n",
-    "    def move(self):\n",
-    "        \"\"\" Ejecuta un movimiento \"\"\"\n",
-    "        if not self.model.is_floor_organized:\n",
-    "            self.model.total_moves += 1\n",
-    "        self.see()\n",
-    "        self.next()\n",
-    "        self.action()\n",
-    "        self.model.record_move(self)\n",
-    "    \n",
     "    def pick_box(self, x, y):\n",
     "        \"\"\" Recoge una caja \"\"\"\n",
     "        self.updateLookingDirection(x, y)\n",
     "        if self.model.update_box_count(x, y, -1):\n",
     "            self.has_box = True\n",
+    "            self.visited_cells[x][y] = True # Uninteresting position now\n",
+    "            self.bfs_path = [] # Reset path\n",
     "        else:\n",
     "            self.intention = \"wait\"\n",
     "    \n",
@@ -1205,6 +1272,7 @@
     "        self.updateLookingDirection(x, y)\n",
     "        if self.model.update_box_count(x, y, 1):\n",
     "            self.has_box = False\n",
+    "            self.bfs_path = [] # Reset path\n",
     "        else:\n",
     "            self.intention = \"wait\"\n",
     "    \n",
@@ -1672,12 +1740,12 @@
     "            'steps': 1000,\n",
     "            'n': 20,\n",
     "            'm': 20,\n",
-    "            'total_boxes': 100,\n",
+    "            'total_boxes': 80,\n",
     "            'discharge_side': 4,\n",
-    "            'sergio_agents':  0,\n",
+    "            'sergio_agents': 5,\n",
     "            'rodrigo_agents': 0,\n",
     "            'pepe_agents': 0,\n",
-    "            'oscar_agents': 5,\n",
+    "            'oscar_agents': 0,\n",
     "            'hector_agents': 0,\n",
     "            'random_agents': 0,\n",
     "            'seed': 22\n",
@@ -1882,7 +1950,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "opengl",
+   "display_name": "opengl_py_3_9_21",
    "language": "python",
    "name": "python3"
   },
