fix multirun experiment with graphs

--- a/agentpy/mainSimulation.ipynb
+++ b/agentpy/mainSimulation.ipynb
@@ -1353,8 +1353,6 @@
     "        pass\n",
     "\n",
     "    def end(self):\n",
-    "        print(\"discharge locations: \")\n",
-    "        print(self.discharge_locations)\n",
     "        # print()\n",
     "        # if not self.is_board_clean:\n",
     "        #     print(\"La limpieza no acabo, se llego al tiempo maximo\")\n",
@@ -1455,7 +1453,6 @@
     "    \n",
     "        return neighbors\n",
     "\n",
-    "    # TODO: Definir concretamente organización de cajas\n",
     "    def update_box_count(self, x, y, dif):\n",
     "        \"\"\" \n",
     "        Suma dif a self.box_count[x][y] y verifica si se terminaron de organizar las cajas.\n",
@@ -1486,6 +1483,7 @@
     "        self.is_floor_organized = (full_discharge_positions or (self.p.total_boxes == discharged_boxes))\n",
     "        # Termina la simulacion cuando se organizan todas las cajas\n",
     "        if self.is_floor_organized:\n",
+    "            self.finish_time = self.t\n",
     "            self.stop()\n",
     "            \n",
     "        return True\n"
@@ -1502,18 +1500,18 @@
     "    simulations_log_2 = 2\n",
     "    iterations_per_sample = 2 \n",
     "    parameters = {\n",
-    "        'random_agents': 0,\n",
+    "        'steps': ap.IntRange(20*20, 20*20*3),\n",
+    "        'n': 20,\n",
+    "        'm': 20,\n",
+    "        'total_boxes': ap.IntRange(10, 80),\n",
+    "        'discharge_side': 4,\n",
     "        'sergio_agents': 0,\n",
     "        'rodrigo_agents': 0,\n",
-    "        'oscar_agents': 0,\n",
     "        'pepe_agents': 0,\n",
-    "        'hector_agents': 10,\n",
-    "        'steps': ap.IntRange(10, 20*20), # From very low, to a very high value\n",
-    "        'n': ap.IntRange(1, 20),\n",
-    "        'm': ap.IntRange(1, 20),\n",
-    "        'percentage_dirty': ap.IntRange(1, 100),\n",
-    "        'initial_position': (0, 0),\n",
-    "        'seed': 22,\n",
+    "        'oscar_agents': 0,\n",
+    "        'hector_agents': 0,\n",
+    "        'random_agents': 0,\n",
+    "        'seed': 22\n",
     "    }\n",
     "\n",
     "    agent_types = [ \n",
@@ -1532,7 +1530,7 @@
     "        # Asign valid values to current agent only\n",
     "        for other_agent in agent_types:\n",
     "            if agent == other_agent:\n",
-    "                parameters[other_agent] = ap.IntRange(1, 50)\n",
+    "                parameters[other_agent] = 5\n",
     "            else: \n",
     "                parameters[other_agent] = 0\n",
     "                \n",
@@ -1542,7 +1540,7 @@
     "            method='saltelli',\n",
     "            calc_second_order=False\n",
     "        )\n",
-    "        exp = ap.Experiment(CleaningModel, sample, iterations=iterations_per_sample, record=True)\n",
+    "        exp = ap.Experiment(BoxWarehouseModel, sample, iterations=iterations_per_sample, record=True)\n",
     "        results = exp.run()\n",
     "        reporters_df = results.reporters\n",
     "        \n",
@@ -1556,6 +1554,8 @@
     "        }\n",
     "        \n",
     "        curr_runs['total'] = len(reporters_df)\n",
+    "        # print(reporters_df)\n",
+    "        \n",
     "        curr_runs['A'] = (reporters_df['percentage_time_taken'] <= 0.25).sum() / curr_runs['total']\n",
     "        curr_runs['B'] = (reporters_df['percentage_time_taken'] <= 0.50).sum() / curr_runs['total']\n",
     "        curr_runs['C'] = (reporters_df['percentage_time_taken'] <= 0.75).sum() / curr_runs['total']\n",
@@ -1586,18 +1586,18 @@
     "    simulations_log_2 = 2\n",
     "    iterations_per_sample = 2 \n",
     "    parameters = {\n",
-    "        'random_agents': 0,\n",
+    "        'steps': 600,\n",
+    "        'n': 20,\n",
+    "        'm': 20,\n",
+    "        'total_boxes': ap.Values(80),\n",
+    "        'discharge_side': 4,\n",
     "        'sergio_agents': 0,\n",
     "        'rodrigo_agents': 0,\n",
-    "        'oscar_agents': 0,\n",
     "        'pepe_agents': 0,\n",
+    "        'oscar_agents': 0,\n",
     "        'hector_agents': 0,\n",
-    "        'steps': 400, \n",
-    "        'n': 13,\n",
-    "        'm': 13,\n",
-    "        'percentage_dirty': 70,\n",
-    "        'initial_position': (0, 0),\n",
-    "        'seed': 22,\n",
+    "        'random_agents': 0,\n",
+    "        # 'seed': 22\n",
     "    }\n",
     "\n",
     "    agent_types = [ \n",
@@ -1616,7 +1616,7 @@
     "        # Asign valid values to current agent only\n",
     "        for other_agent in agent_types:\n",
     "            if agent == other_agent:\n",
-    "                parameters[other_agent] = ap.IntRange(1, 50)\n",
+    "                parameters[other_agent] = 5\n",
     "            else: \n",
     "                parameters[other_agent] = 0\n",
     "                \n",
@@ -1626,7 +1626,7 @@
     "            method='saltelli',\n",
     "            calc_second_order=False\n",
     "        )\n",
-    "        exp = ap.Experiment(CleaningModel, sample, iterations=iterations_per_sample, record=True)\n",
+    "        exp = ap.Experiment(BoxWarehouseModel, sample, iterations=iterations_per_sample, record=True,)\n",
     "        results = exp.run()\n",
     "        \n",
     "        # Update agents vs time_taken\n",
@@ -1664,18 +1664,18 @@
     "    simulations_log_2 = 2\n",
     "    iterations_per_sample = 2 \n",
     "    parameters = {\n",
-    "        'random_agents': 0,\n",
+    "        'steps': 600,\n",
+    "        'n': 20,\n",
+    "        'm': 20,\n",
+    "        'total_boxes': 80,\n",
+    "        'discharge_side': 4,\n",
     "        'sergio_agents': 0,\n",
     "        'rodrigo_agents': 0,\n",
-    "        'oscar_agents': 0,\n",
     "        'pepe_agents': 0,\n",
+    "        'oscar_agents': 0,\n",
     "        'hector_agents': 0,\n",
-    "        'steps': 400, \n",
-    "        'n': 13,\n",
-    "        'm': 13,\n",
-    "        'percentage_dirty': 70,\n",
-    "        'initial_position': (0, 0),\n",
-    "        'seed': 22,\n",
+    "        'random_agents': 0,\n",
+    "        'seed': 22\n",
     "    }\n",
     "\n",
     "    agent_types = [ \n",
@@ -1694,7 +1694,7 @@
     "        # Asign valid values to current agent only\n",
     "        for other_agent in agent_types:\n",
     "            if agent == other_agent:\n",
-    "                parameters[other_agent] = ap.IntRange(1, 50)\n",
+    "                parameters[other_agent] = 5\n",
     "            else: \n",
     "                parameters[other_agent] = 0\n",
     "                \n",
@@ -1704,7 +1704,7 @@
     "            method='saltelli',\n",
     "            calc_second_order=False\n",
     "        )\n",
-    "        exp = ap.Experiment(CleaningModel, sample, iterations=iterations_per_sample, record=True)\n",
+    "        exp = ap.Experiment(BoxWarehouseModel, sample, iterations=iterations_per_sample, record=True)\n",
     "        results = exp.run()\n",
     "        \n",
     "        # Update agents vs total_movements\n",
@@ -1838,10 +1838,10 @@
    "outputs": [],
    "source": [
     "options = {\n",
-    "    'show_animation': True,\n",
-    "    'multirun_experiment': False, # Not tested\n",
-    "    'test_time_taken': False, # Not tested\n",
-    "    'test_mov_amount': False, # Not tested\n",
+    "    'show_animation': False,\n",
+    "    'multirun_experiment': True, # Tested\n",
+    "    'test_time_taken': True, # Not Working\n",
+    "    'test_mov_amount': False, # Not Working\n",
     "    'single_experiment': False, # Tested \n",
     "} # Estas siempre tienen que estar en falso a menos que estemos probando algo porque tambien se llaman desde PlanoCarros"
    ]
