Fix bugs and add optional prints

--- a/agentpy/mainSimulation.ipynb
+++ b/agentpy/mainSimulation.ipynb
@@ -1366,6 +1366,9 @@
     "        self.report('total_moves', self.total_moves)\n",
     "        self.report('time_taken', self.finish_time)\n",
     "        self.report('percentage_time_taken', self.finish_time / self.p.steps)\n",
+    "        # print('Total moves until finish:', self.total_moves)\n",
+    "        # print('Time taken to finish:', self.finish_time)\n",
+    "        # print('Percentage of time taken, considering total time available:', self.finish_time / self.p.steps)\n",
     "        # self.report('rounds', Move.rounds)\n",
     "        self.rounds = Move.rounds\n",
     "    \n",
@@ -1840,7 +1843,7 @@
     "options = {\n",
     "    'show_animation': False,\n",
     "    'multirun_experiment': True, # Tested\n",
-    "    'test_time_taken': True, # Not Working\n",
+    "    'test_time_taken': False, # Not Working\n",
     "    'test_mov_amount': False, # Not Working\n",
     "    'single_experiment': False, # Tested \n",
     "} # Estas siempre tienen que estar en falso a menos que estemos probando algo porque tambien se llaman desde PlanoCarros"
