--- a/agentpy/mainSimulation.ipynb
+++ b/agentpy/mainSimulation.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'env-opengl (Python 3.9.21)' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n env-opengl ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "import agentpy as ap\n",
@@ -807,173 +818,178 @@
    "source": [
     "class HectorAgent(ap.Agent):\n",
     "    \"\"\"\n",
-    "    Se mueve con movimientos al azar, pero si encuentra una caja la agarra \n",
-    "    y entuentra el mejor camino al centro\n",
-    "    \"\"\"\n",
-    "    \n",
+    "    Las reglas de este agente son las siguientes:\n",
+    "    - Si detecta una caja en su vecindad inmediata (radio de 1 celda), la recoge inmediatamente, incluso si ya lleva otra.\n",
+    "    - Al llevar una caja, selecciona la zona de descarga menos congestionada dentro del área central, no solo la más cercana.  \n",
+    "    - Usa rutas optimizadas con el algoritmo A* para evitar obstáculos y minimizar el tiempo de movimiento.  \n",
+    "    - Si no tiene caja pero ha visto cajas en posiciones específicas previamente, prioriza ir a la ubicación con más cajas no recolectadas en su memoria interna.\n",
+    "    - Al explorar, busca celdas con alto potencial de contener cajas, calculado mediante:  \n",
+    "        - Mayor densidad histórica de cajas en columnas adyacentes.  \n",
+    "        - Menor número de agentes observados recientemente en la zona.  \n",
+    "    - Prefiere moverse hacia áreas con más celdas no exploradas y evita repetir rutas de otros agentes.\n",
+    "   - Si detecta otro agente moviéndose hacia su celda objetivo, recalculá la ruta inmediatamente para evitar colisiones.\n",
+    "   \"\"\"\n",
+    "   \n",
     "    def setup(self):\n",
-    "        self.intention = None  # Intención actual (pick_up, stack, move o wait)\n",
-    "        self.intention_position = None  # Posición objetivo al hacer acción\n",
-    "        \n",
-    "        self.nearby_single_boxes = []  # Coordenadas de las cajas cercanas (stacks de 1 sola caja)\n",
-    "        self.nearby_box_stack = []  # Coordenadas de stacks de cajas cercanos (stacks de más de 1 caja)\n",
+    "        self.intention = None\n",
+    "        self.intention_position = None\n",
+    "        self.nearby_single_boxes = []\n",
+    "        self.nearby_box_stack = []\n",
     "        self.has_box = False\n",
+    "        self.looking_direction = \"Up\"\n",
     "        \n",
-    "        self.looking_direction = \"Up\"  # Dirección en la que está mirando\n",
-    "        \n",
-    "        # Inicializar tablero interno\n",
-    "        self.internal_board = [\n",
-    "            [0 for _ in range(self.model.p.m)] for _ in range(self.model.p.n)\n",
-    "        ]\n",
-    "        \n",
-    "        self.bfs_path = []  # Lista de movimientos para el BFS\n",
+    "        self.internal_board = [[0 for _ in range(self.model.p.m)] for _ in range(self.model.p.n)]\n",
+    "        self.visited_cells = [[False for _ in range(self.model.p.m)] for _ in range(self.model.p.n)]\n",
+    "        self.agent_positions = set() \n",
     "        self.discharge_locations = self.model.discharge_locations\n",
-    "        self.discharge_location = (-1, -1) # al principio no hay ninguna seleccionada\n",
+    "        self.discharge_usage = {loc: 0 for loc in self.discharge_locations}\n",
+    "        \n",
+    "        self.current_path = []\n",
+    "        self.box_density_map = [[0 for _ in range(self.model.p.m)] for _ in range(self.model.p.n)]\n",
     "\n",
     "    def setup_position(self, start_position):\n",
-    "        self.position = start_position  # Posición inicial del agente\n",
+    "        self.position = start_position\n",
+    "        self.visited_cells[start_position[0]][start_position[1]] = True\n",
     "        \n",
     "    def see(self):\n",
-    "        \"\"\" Percibe su entorno y actualiza el internal_board \"\"\"\n",
+    "        self.box_density_map = [\n",
+    "        [val * 0.9 for val in row] \n",
+    "        for row in self.box_density_map\n",
+    "    ]\n",
+    "        \n",
     "        x, y = self.position\n",
     "        self.nearby_single_boxes = []\n",
     "        self.nearby_box_stack = []\n",
-    "        \n",
+    "        self.agent_positions = {tuple(agent.position) for agent in self.model.all_agents if agent != self}\n",
+    "\n",
     "        neighbors = self.model.get_neighbors(x, y)\n",
     "        for neighbor_pos in neighbors:\n",
     "            i, j = neighbor_pos\n",
     "            if not self.model.is_valid_position(neighbor_pos):\n",
     "                continue\n",
     "            \n",
+    "            self.visited_cells[i][j] = True\n",
     "            box_count = self.model.box_count[i][j]\n",
     "            self.internal_board[i][j] = box_count\n",
     "            \n",
-    "            if box_count == 1 and (i, j) not in self.discharge_locations:\n",
-    "                self.nearby_single_boxes.append(neighbor_pos)\n",
-    "            elif 1 <= box_count <= 4:\n",
-    "                self.nearby_box_stack.append(neighbor_pos)\n",
+    "            if box_count > 0 and (i, j) not in self.discharge_locations:\n",
+    "                self.box_density_map[i][j] += 1\n",
+    "                if box_count == 1:\n",
+    "                    self.nearby_single_boxes.append(neighbor_pos)\n",
+    "                elif 1 <= box_count <= 4:\n",
+    "                    self.nearby_box_stack.append(neighbor_pos)\n",
     "    \n",
     "    def choose_plan(self):\n",
-    "        \"\"\" Escoge el plan según el estado actual \"\"\"\n",
-    "        if self.has_box:\n",
-    "            return \"find_discharge_location\"\n",
-    "        else:\n",
-    "            return \"explore\"\n",
+    "        if self.nearby_single_boxes:\n",
+    "            return \"pick_up\"\n",
+    "        return \"find_discharge_location\" if self.has_box else \"explore\"\n",
     "    \n",
     "    def find_discharge_location(self):\n",
-    "        \"\"\" Encuentra la ruta a una discharge_location usando BFS \"\"\"\n",
-    "        # Vemos si alguno de los vecinos es la discharge_location que buscamos\n",
-    "        for neighbor in self.model.get_neighbors(*self.position):\n",
-    "            \n",
-    "            if (int(neighbor[0]), int(neighbor[1])) == (int(self.discharge_location[0]), int(self.discharge_location[1])):\n",
-    "                if self.model.box_count[neighbor[0]][neighbor[1]] < 5:\n",
-    "                    self.intention = \"stack\"\n",
-    "                    self.intention_position = neighbor\n",
-    "                    \n",
-    "                    # checamos si hay un agente en la posicion donde queremos poner una caja que es adjacente a nosotros  \n",
-    "                    for agent in self.model.all_agents:\n",
-    "                        if np.array_equal(agent.position, self.intention_position):  # Si pasa hacemos un movimiento random\n",
-    "                            self.intention = \"move\"\n",
-    "                            neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
-    "                            self.intention_position = self.model.nprandom.choice(neighbors)\n",
-    "                    self.bfs_path = []\n",
-    "                    return\n",
-    "                else:\n",
-    "                    self.bfs_path = []\n",
-    "            \n",
-    "\n",
-    "        # Si no hemos computado el mejor camino al centro lo encontramos con bfs\n",
-    "        if not self.bfs_path:\n",
-    "            start = self.position\n",
-    "            # Calculamos el centro del tablero\n",
-    "            center_x, center_y = self.p.n / 2, self.p.m / 2\n",
-    "\n",
-    "            # Filtramos las locaciones invalidas\n",
-    "            valid_discharge_locations = [\n",
-    "                loc for loc in self.discharge_locations\n",
-    "                if self.internal_board[loc[0]][loc[1]] < 5  \n",
-    "            ]\n",
-    "\n",
-    "            # Seleccionamos la mas cercana al centro\n",
-    "            if valid_discharge_locations:\n",
-    "                self.discharge_location = min(\n",
-    "                    valid_discharge_locations,\n",
-    "                    key=lambda loc: ((loc[0] - center_x) ** 2 + (loc[1] - center_y) ** 2) ** 0.5\n",
-    "                )\n",
-    "            else:\n",
-    "                return\n",
-    "            # Encontramos el mejor camino\n",
-    "            self.bfs_path = self.bfs(start, self.discharge_location)\n",
-    "            if self.bfs_path:\n",
-    "                self.bfs_path.pop(0)\n",
+    "        valid_discharge = [loc for loc in self.discharge_locations if self.discharge_usage[loc] < 5]\n",
+    "        if not valid_discharge:\n",
+    "            return\n",
     "        \n",
-    "        if self.bfs_path:\n",
-    "            # Nos intentamos mover a la posicion siguiente\n",
-    "            self.intention_position = self.bfs_path.pop(0)\n",
-    "            x, y = self.intention_position\n",
-    "            self.intention = \"move\"\n",
-    "            if not self.model.is_valid_move_position(self.intention_position):\n",
-    "                # Hacemos movimiento random\n",
-    "                self.intention = \"move\"\n",
-    "                neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
-    "                self.intention_position = self.model.nprandom.choice(neighbors)\n",
-    "                self.bfs_path = []\n",
+    "        for loc in self.discharge_locations:\n",
+    "            self.discharge_usage[loc] = self.internal_board[loc[0]][loc[1]]\n",
+    "        \n",
+    "        target = min(valid_discharge, key=lambda loc: (\n",
+    "            abs(loc[0] - self.position[0]) + abs(loc[1] - self.position[1])  # distancia manhattan\n",
+    "        ))\n",
+    "        \n",
+    "        # Encontrar con A* \n",
+    "        self.current_path = self.a_star(self.position, target)\n",
+    "        if self.current_path:\n",
+    "            self.follow_path()\n",
     "        else:\n",
-    "            self.intention = \"move\"\n",
-    "            neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
-    "            self.intention_position = self.model.nprandom.choice(neighbors)\n",
-    "    \n",
-    "    def bfs(self, start, goal):\n",
-    "        \"\"\" Implements BFS to find the path from start to goal \"\"\"\n",
-    "        from collections import deque\n",
-    "        queue = deque([(start, [])])\n",
-    "        visited = set()\n",
-    "        \n",
-    "        while queue:\n",
-    "            current, path = queue.popleft()\n",
-    "            \n",
-    "            # Encontramos un camino\n",
-    "            if tuple(current) == tuple(goal):  \n",
-    "                return path + [current]\n",
-    "            \n",
-    "            if tuple(current) in visited:\n",
-    "                continue\n",
-    "            visited.add(tuple(current))\n",
-    "            \n",
-    "            for neighbor in self.model.get_neighbors(current[0], current[1]):\n",
-    "                if self.model.is_valid_position(neighbor) and tuple(neighbor) not in visited and (self.internal_board[neighbor[0]][neighbor[1]] == 0 or np.array_equal(neighbor, goal)): # Checo en mi internal_board\n",
-    "                    queue.append((neighbor, path + [current]))\n",
-    "        return []  # No econtramos camino\n",
+    "            self.random_move()\n",
     "    \n",
     "    def explore(self):\n",
-    "        \"\"\" Explora el entorno \"\"\"\n",
-    "        self.intention = \"wait\"  # Por defecto, espera\n",
-    "        if not self.has_box and self.nearby_single_boxes:\n",
-    "            self.intention = \"pick_up\"\n",
-    "            self.intention_position = self.model.nprandom.choice(self.nearby_single_boxes)\n",
+    "        max_density = max(max(row) for row in self.box_density_map)\n",
+    "        target = None\n",
+    "        \n",
+    "        for i in range(self.model.p.n):\n",
+    "            for j in range(self.model.p.m):\n",
+    "                if self.box_density_map[i][j] == max_density and not self.visited_cells[i][j]:\n",
+    "                    target = (i, j)\n",
+    "                    break\n",
+    "            if target:\n",
+    "                break\n",
+    "        \n",
+    "        if target:\n",
+    "            self.current_path = self.a_star(self.position, target)\n",
+    "            self.follow_path()\n",
     "        else:\n",
-    "            self.intention = \"move\"\n",
-    "            neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
+    "            self.random_move()\n",
+    "\n",
+    "    def a_star(self, start, goal):\n",
+    "        from heapq import heappush, heappop\n",
+    "        open_set = []\n",
+    "        heappush(open_set, (0, start))\n",
+    "        came_from = {}\n",
+    "        g_score = {start: 0}\n",
+    "        f_score = {start: self.heuristic(start, goal)}\n",
+    "\n",
+    "        while open_set:\n",
+    "            current = heappop(open_set)[1]\n",
+    "            if current == goal:\n",
+    "                return self.reconstruct_path(came_from, current)\n",
+    "\n",
+    "            for neighbor in self.model.get_neighbors(*current):\n",
+    "                if not self.model.is_valid_position(neighbor) or self.internal_board[neighbor[0]][neighbor[1]] > 0:\n",
+    "                    continue\n",
+    "                \n",
+    "                tentative_g = g_score[current] + 1\n",
+    "                if neighbor not in g_score or tentative_g < g_score[neighbor]:\n",
+    "                    came_from[neighbor] = current\n",
+    "                    g_score[neighbor] = tentative_g\n",
+    "                    f_score[neighbor] = tentative_g + self.heuristic(neighbor, goal)\n",
+    "                    heappush(open_set, (f_score[neighbor], neighbor))\n",
+    "        return []\n",
+    "\n",
+    "    def heuristic(self, a, b):\n",
+    "        return abs(a[0] - b[0]) + abs(a[1] - b[1])  # Distancia manhattan\n",
+    "\n",
+    "    def follow_path(self):\n",
+    "        if self.current_path:\n",
+    "            next_pos = self.current_path.pop(0)\n",
+    "            if next_pos not in self.agent_positions and self.model.is_valid_move_position(next_pos):\n",
+    "                self.intention_position = next_pos\n",
+    "                self.intention = \"move\"\n",
+    "            else:\n",
+    "                self.random_move()\n",
+    "        else:\n",
+    "            self.random_move()\n",
+    "\n",
+    "    def random_move(self):\n",
+    "        neighbors = [pos for pos in self.model.get_neighbors(*self.position) \n",
+    "                     if self.model.is_valid_move_position(pos) and pos not in self.agent_positions]\n",
+    "        if neighbors:\n",
     "            self.intention_position = self.model.nprandom.choice(neighbors)\n",
-    "    \n",
+    "            self.intention = \"move\"\n",
+    "        else:\n",
+    "            self.intention = \"wait\"\n",
+    "            \n",
     "    def next(self):\n",
-    "        \"\"\" Determina el siguiente paso \"\"\"\n",
+    "        \"\"\" Determines the next action based on the current plan \"\"\"\n",
     "        plan = self.choose_plan()\n",
+    "        \n",
     "        if plan == \"find_discharge_location\":\n",
     "            self.find_discharge_location()\n",
+    "            self.current_path = [] \n",
     "        elif plan == \"explore\":\n",
     "            self.explore()\n",
-    "    \n",
+    "        if not self.intention_position or not self.model.is_valid_move_position(self.intention_position):\n",
+    "            self.random_move()\n",
+    "\n",
     "    def action(self):\n",
-    "        \"\"\" Ejecuta la acción \"\"\"\n",
     "        if self.intention == \"stack\":\n",
     "            self.stack_boxes(*self.intention_position)\n",
     "        elif self.intention == \"pick_up\":\n",
     "            self.pick_box(*self.intention_position)\n",
     "        elif self.intention == \"move\" and self.model.is_valid_move_position(self.intention_position):\n",
     "            self.position = self.intention_position\n",
+    "\n",
     "    def move(self):\n",
-    "        \"\"\" Ejecuta un movimiento \"\"\"\n",
     "        if not self.model.is_floor_organized:\n",
     "            self.model.total_moves += 1\n",
     "        self.see()\n",
@@ -1953,7 +1969,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "opengl_py_3_9_21",
+   "display_name": "env-opengl",
    "language": "python",
    "name": "python3"
   },
@@ -1966,7 +1982,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
